crates/reinhardt-pages/tests/ui/page/fail/deprecated_keypress_payload.rs
#![deny(deprecated)]

use reinhardt_pages::event::{EventPayload, KeyPressEvent};

fn assert_payload<P: EventPayload>() {}

fn main() {
	assert_payload::<KeyPressEvent>();
}
